--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,4 +1,8 @@
 # Hibernate
+
+spring.profiles.active=batch
+
+
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
 spring.jpa.hibernate.ddl-auto=validate
 
