Production Monitoring and Management with Spring Boot Actuator

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -2,3 +2,17 @@
 
 spring.profiles.active=mysql
 
+
+endpoints.health.id=status
+endpoints.health.sensitive=false
+endpoints.shutdown.enabled=true
+endpoints.shutdown.sensitive=false
+
+management.context-path=/actuators
+
+
+info.build.groupId=@project.groupId@
+info.build.artifact=@project.artifactId@
+info.build.name=@project.name@
+info.build.description=@project.description@
+info.build.version=@project.version@
