--- a/src/main/resources/config/application-mysql.properties
+++ b/src/main/resources/config/application-mysql.properties
@@ -12,10 +12,11 @@ spring.datasource.url=jdbc:mysql://localhost/springboot
 spring.datasource.username=root
 spring.datasource.password=chiku
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.validation-query=select 1;
 spring.datasource.test-on-borrow=true
 
 # Initialization
-spring.datasource.schema=classpath:/data/mysql/schema.sql
-spring.datasource.data=classpath:/data/mysql/data.sql
+#spring.datasource.schema=classpath:/data/mysql/schema.sql
+#spring.datasource.data=classpath:/data/mysql/data.sql
