Protecting Application Assets with Spring Security - Part One - Out-of-the-Box Features

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -10,9 +10,15 @@ endpoints.shutdown.sensitive=false
 
 management.context-path=/actuators
 
+management.security.role=SYSADMIN
 
 info.build.groupId=@project.groupId@
 info.build.artifact=@project.artifactId@
 info.build.name=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
+
+
+security.user.name=user
+security.user.password=chiku
+
