Creating Meaningful RESTful Web Service Controller Class Hierarchies with Spring Boot
Disable spring Security

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -8,8 +8,10 @@ endpoints.health.sensitive=false
 endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
 
-management.context-path=/actuators
+security.basic.enabled=false
+management.security.enabled=false
 
+management.context-path=/actuators
 management.security.role=SYSADMIN
 
 info.build.groupId=@project.groupId@
