Creating a Custom Spring Security Solution - Basic account and role entity created -1

--- a/src/main/resources/config/application-mysql.properties
+++ b/src/main/resources/config/application-mysql.properties
@@ -18,5 +18,5 @@ spring.datasource.validation-query=select 1;
 spring.datasource.test-on-borrow=true
 
 # Initialization
-#spring.datasource.schema=classpath:/data/mysql/schema.sql
-#spring.datasource.data=classpath:/data/mysql/data.sql
+spring.datasource.schema=classpath:/data/mysql/schema.sql
+spring.datasource.data=classpath:/data/mysql/data.sql
